--- a/.github/workflows/actions_setting.yml
+++ b/.github/workflows/actions_setting.yml
@@ -1,24 +1,32 @@
-name: Code Review
-
-permissions:
-  contents: read
-  pull-requests: write
-
+name: PR Review Workflow
 on:
+  # PRに対しActionsを動作させる
   pull_request:
-    types: [opened, reopened, synchronize]
+    types: [opened, synchronize, reopened]
 
 jobs:
-  test:
+  review:
     runs-on: ubuntu-latest
+    # ActionsからPRに対しコメントするために必要
+    permissions:
+      pull-requests: write
+
     steps:
-      - uses: anc95/ChatGPT-CodeReview@main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          # Optional
-          LANGUAGE: Japanese # 言語
-          OPENAI_API_ENDPOINT: https://api.openai.com/v1
-          MODEL: gpt-4 # 使用するモデル
-          top_p: 1
-          temperature: 1
+    # レビュースクリプト実行のためコードをチェックアウトする
+    - name: Checkout Code
+      uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+    - name: Install dependencies
+      run: |
+        pip install openai
+        pip install PyGithub
+    - name: Run script
+      run: python scripts/code_review_script.py
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        REPOSITORY: "your-username/your-repository-name"
+        PR_NUMBER: ${{ github.event.number }}
