--- a/.github/workflows/actions_setting.yml
+++ b/.github/workflows/actions_setting.yml
@@ -28,5 +28,5 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        REPOSITORY: "your-username/your-repository-name"
+        REPOSITORY: "Junki-Kawatani/test"
         PR_NUMBER: ${{ github.event.number }}
