--- a/.github/workflows/actions_setting.yml
+++ b/.github/workflows/actions_setting.yml
@@ -1,32 +1,18 @@
-name: PR Review Workflow
+name: Review PR
+
 on:
-  # PRに対しActionsを動作させる
-  pull_request:
-    types: [opened, synchronize, reopened]
+  issue_comment:
+    types: [created]
 
 jobs:
-  review:
+  review_pr:
+    if: startsWith(github.event.comment.body, '/review')
     runs-on: ubuntu-latest
-    # ActionsからPRに対しコメントするために必要
-    permissions:
-      pull-requests: write
-
+    name: Checkout code & Review PR
     steps:
-    # レビュースクリプト実行のためコードをチェックアウトする
-    - name: Checkout Code
-      uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-    - name: Install dependencies
-      run: |
-        pip install openai
-        pip install PyGithub
-    - name: Run script
-      run: python scripts/code_review_script.py
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        REPOSITORY: "Junki-Kawatani/test"
-        PR_NUMBER: ${{ github.event.number }}
+      - uses: actions/checkout@v3
+      - uses: kentakozuka/github-ai-review@main
+        with:
+          PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          # MODEL_NAME: ${{ secrets.MODEL_NAME }}
