--- a/.github/workflows/actions_setting.yml
+++ b/.github/workflows/actions_setting.yml
@@ -3,16 +3,48 @@ name: Review PR
 on:
   issue_comment:
     types: [created]
+  pull_request:
+    types: [opened, edited, reopened]
 
 jobs:
   review_pr:
-    if: startsWith(github.event.comment.body, '/review')
+    # コメントの本文に `@review` または `/review` が含まれている場合に実行
+    if: contains(github.event.comment.body, '@review') || contains(github.event.comment.body, '/review')
     runs-on: ubuntu-latest
     name: Checkout code & Review PR
     steps:
-      - uses: actions/checkout@v3
+      # PRのターゲットブランチをチェックアウト
+      - name: Checkout PR branch
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+
+      # Pythonのセットアップが必要な場合
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
       - uses: kentakozuka/github-ai-review@main
         with:
           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          # MODEL_NAME: ${{ secrets.MODEL_NAME }}
+          MODEL_NAME: 'gpt-4'
+
+      # 成功時のコメントを投稿
+      - name: Post success comment
+        if: success()
+        run: |
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -d '{"body": "AIレビューが成功しました"}' \
+            https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/comments
+
+      # 失敗時にコメントを投稿
+      - name: Post failure comment
+        if: failure()
+        run: |
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -d '{"body": "AIレビューに失敗しました。エラーを確認してください。"}' \
+            https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/comments
