--- a/.github/workflows/actions_setting.yml
+++ b/.github/workflows/actions_setting.yml
@@ -3,6 +3,7 @@ name: Code Review on Request
 permissions:
   contents: read
   pull-requests: write
+  issues: write  # コメントを投稿するための権限
 
 on:
   issue_comment:
@@ -15,15 +16,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      
+
       - name: Run GPT-based code review
+        id: run_review
         uses: anc95/ChatGPT-CodeReview@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          LANGUAGE: Japanese  # 日本語でレビューを返す
+          LANGUAGE: Japanese
           OPENAI_API_ENDPOINT: https://api.openai.com/v1
-          MODEL: gpt-4  # 使用するモデル
+          MODEL: gpt-4o-mini
           PROMPT: |
             プルリクエストに含まれるコードにおいて、バグ、改善点、パフォーマンス問題がないか確認し、必要であれば指摘してください。
           top_p: 1
@@ -31,3 +33,12 @@ jobs:
           max_tokens: 10000
           MAX_PATCH_LENGTH: 10000  # コード差分の最大長
 
+      - name: Post review comment
+        if: success()  # AIレビューが成功した場合に実行
+        run: |
+          review_result=$(cat ${{ steps.run_review.outputs.review_result }})
+          echo "Review result: $review_result"
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -d "{\"body\": \"$review_result\"}" \
+            https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/comments
