--- a/.github/workflows/actions_setting.yml
+++ b/.github/workflows/actions_setting.yml
@@ -25,7 +25,7 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           LANGUAGE: Japanese
           OPENAI_API_ENDPOINT: https://api.openai.com/v1
-          MODEL: gpt-4o-mini
+          MODEL: gpt-4o-mini  # モデルを gpt-4o-mini に変更
           PROMPT: |
             プルリクエストに含まれるコードにおいて、バグ、改善点、パフォーマンス問題がないか確認し、必要であれば指摘してください。
           top_p: 1
@@ -33,12 +33,25 @@ jobs:
           max_tokens: 10000
           MAX_PATCH_LENGTH: 10000  # コード差分の最大長
 
-      - name: Post review comment
+      - name: Post review comment if successful
         if: success()  # AIレビューが成功した場合に実行
         run: |
-          review_result=$(cat ${{ steps.run_review.outputs.review_result }})
+          if [ -z "${{ steps.run_review.outputs.review_result }}" ]; then
+            review_result="AIレビュー結果がありませんでした。"
+          else
+            review_result=${{ steps.run_review.outputs.review_result }}
+          fi
           echo "Review result: $review_result"
           curl -X POST \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -d "{\"body\": \"$review_result\"}" \
+            https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/comments
+
+      - name: Post failure comment if review fails
+        if: failure()  # AIレビューが失敗した場合に実行
+        run: |
+          echo "AIレビューに失敗しました。"
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -d "{\"body\": \"AIレビューに失敗しました。ログを確認してください。\"}" \
             https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/comments
